# onepercent

./: .clang-format  .gitattributes  BUILD.BAT  CMakeLists.txt  Konzept.docx  OnePercent.sln  RUN.BAT  TODO.txt  class diagram.vsd  make_run.sh
OnePercent/: AbstractSkill.h  BackgroundModel.cpp  BackgroundModel.h  CMakeLists.txt  CountriesMap.cpp  CountriesMap.h  Country.cpp  Country.h  CountryMesh.cpp  CountryMesh.h  CountryOverlay.cpp  CountryOverlay.h  Follower.cpp  Follower.h  GameApplication.cpp  Globals.cpp  Globals.h  GlobeCameraState.cpp  GlobeCameraState.h  GlobeInteractionState.cpp  GlobeInteractionState.h  GlobeModel.cpp  GlobeModel.h  GlobeOverviewState.cpp  GlobeOverviewState.h  GlobeOverviewWorld.cpp  GlobeOverviewWorld.h  GlobeViewer.cpp  GlobeViewer.h  Helper.cpp  Helper.h  LoadingGlobeOverviewState.cpp  LoadingGlobeOverviewState.h  OnePercent.vcxproj  OnePercent.vcxproj.filters  ProgressingValue.h  Simulation.cpp  Simulation.h  SkillBranch.h  UpdateCallback.cpp  (+2 more)
OnePercent/core/: CrashDumpWriter.cpp  Enums.h  Globals.cpp  Globals.h  Helper.cpp  Helper.h  LuaStateManager.cpp  LuaStateManager.h  Macros.h  ModManager.cpp  ModManager.h  Multithreading.h  Observables.h  OnePercentApplication.cpp  OnePercentApplication.h  QConnectFunctor.cpp  QConnectFunctor.h  QtGameApplication.cpp  QtGameApplication.h  main.cpp
OnePercent/data/: BoundariesData.cpp  BoundariesData.h  CountriesMap.cpp  CountriesMap.h  links.txt
OnePercent/nodes/: BackgroundModel.cpp  BackgroundModel.h  BoundariesMesh.cpp  BoundariesMesh.h  CountryGeometry.cpp  CountryGeometry.h  CountryHoverNode.cpp  CountryHoverNode.h  CountryMesh.cpp  CountryMesh.h  CountryNameOverlay.cpp  CountryNameOverlay.h  CountryNode.cpp  CountryNode.h  CountryOverlay.cpp  CountryOverlay.h  CountryPresenter.cpp  CountryPresenter.h  GlobeModel.cpp  GlobeModel.h  GlobeOverviewWorld.cpp  GlobeOverviewWorld.h  NodeSwitch.h  TextNode.cpp  TextNode.h
OnePercent/scripting/: ConfigManager.cpp  ConfigManager.h  LuaArrayTable.h  LuaBranchValuesTable.cpp  LuaBranchValuesTable.h  LuaBranchesActivatedTable.cpp  LuaBranchesActivatedTable.h  LuaBranchesTable.cpp  LuaBranchesTable.h  LuaBridgeDefinition.cpp  LuaCallback.cpp  LuaCallback.h  LuaCallbackRegistry.cpp  LuaCallbackRegistry.h  LuaClassDefinition.h  LuaClassInstance.cpp  LuaConfig.cpp  LuaConfig.h  LuaControl.cpp  LuaControl.h  LuaCountriesTable.cpp  LuaCountriesTable.h  LuaCountry.cpp  LuaCountry.h  LuaCountryState.cpp  LuaCountryState.h  LuaDefines.h  LuaExternalClassDefinition.cpp  LuaExternalClassDefinitions.h  LuaInvalidDataException.cpp  LuaInvalidDataException.h  LuaLogger.cpp  LuaLogger.h  LuaMapTable.cpp  LuaMapTable.h  LuaModel.cpp  LuaModel.h  LuaModelPrototype.cpp  LuaModelPrototype.h  LuaObjectMapper.cpp  (+33 more)
OnePercent/shader/: atmosphere.vert  clouds.vert  globe.frag  globe.geom  globe.vert
OnePercent/simulation/: CountriesContainer.cpp  CountriesContainer.h  Country.cpp  Country.h  CountryData.cpp  CountryData.h  CountryState.cpp  CountryState.h  CountryValues.cpp  CountryValues.h  LuaBranchValuesTable.cpp  LuaBranchValuesTable.h  LuaBranchesTable.cpp  LuaCountriesTable.cpp  LuaValuesTable.cpp  ModelContainer.cpp  ModelContainer.h  Neighbourship.h  NeighbourshipsContainer.cpp  NeighbourshipsContainer.h  ProgressingValue.h  ProgressingValueContainer.h  SimulatedLuaValue.cpp  SimulatedLuaValue.h  SimulatedValue.h  SimulatedValuesContainer.h  Simulation.cpp  Simulation.h  SimulationState.cpp  SimulationState.h  SimulationStateContainer.cpp  SimulationStateContainer.h  SimulationStateReaderWriter.cpp  SimulationStateReaderWriter.h  SimulationVisitor.cpp  SimulationVisitor.h  Skill.cpp  Skill.h  SkillBranch.cpp  SkillBranch.h  (+6 more)
OnePercent/states/: GlobeCameraState.cpp  GlobeCameraState.h  GlobeInteractionState.cpp  GlobeInteractionState.h  GlobeOverviewState.cpp  GlobeOverviewState.h  LoadingGlobeOverviewState.cpp  LoadingGlobeOverviewState.h  MainMenuState.cpp  MainMenuState.h  QtGameLoadingState.cpp  QtGameLoadingState.h  QtGameState.cpp  QtGameState.h
OnePercent/widgets/: CountryMenuWidget.cpp  CountryMenuWidget.h  DebugWindow.cpp  DebugWindow.h  MainFrameWidget.cpp  MainFrameWidget.h  MainWindow.cpp  MainWindow.h  OsgWidget.cpp  OsgWidget.h  SkillsWidget.cpp  SkillsWidget.h  VirtualOverlay.cpp  VirtualOverlay.h
Vectorizer/: CMakeLists.txt
Vectorizer/src/: boundaries.cpp  boundaries.h  check.cpp  countries.h  distancemap.cpp  draw.cpp  draw.h  io.cpp  io.h  main.cpp  mesh.h  quadtree.h  reduce.h  types.cpp  types.h
VectorizerLib/: CMakeLists.txt
VectorizerLib/src/: boundaries.cpp  countries.cpp  detect.cpp  findcycles.cpp  io.cpp  reduce.cpp  types.cpp
VectorizerLibTest/: CMakeLists.txt
VectorizerLibTest/test/: OctTreeTest.cpp
luadoc/: CMakeLists.txt
luadoc/luadoc/: CMakeLists.txt  luadoc_resources.qrc
luadoc/luadocTest/: CMakeLists.txt
luadoc/src/: DocsGenerator.cpp
luadoc/templates/: index.html
luadocTest/: CMakeLists.txt
luadocTest/test/: luadocTest.cpp
osgGaming/: CMakeLists.txt  osgGaming.vcxproj  osgGaming.vcxproj.filters
osgGaming/include/: GameException.h  GameSettings.h
osgGaming/src/: AbstractGameState.cpp  CameraAlignedQuad.cpp  DepthOfFieldEffect.cpp  FastApproximateAntiAliasingEffect.cpp  FileResourceLoader.cpp  FpsTextCallback.cpp  FpsUpdateCallback.cpp  GameApplication.cpp  GameException.cpp  GameLoadingState.cpp  GameSettings.cpp  GameState.cpp  GameStateStack.cpp  Helper.cpp  HighDynamicRangeEffect.cpp  Hud.cpp  InjectionContainer.cpp  InputManager.cpp  LogManager.cpp  NativeGameApplication.cpp  NativeInputManager.cpp  NativeView.cpp  PackageResourceLoader.cpp  ParameterManager.cpp  PostProcessingEffect.cpp  PropertiesManager.cpp  PropertyArray.cpp  PropertyGroup.cpp  ResourceManager.cpp  ShaderFactory.cpp  SimulationCallback.cpp  StaticResources.cpp  TextureFactory.cpp  Timer.cpp  TimerFactory.cpp  TransformableCameraManipulator.cpp  UIButton.cpp  (+16 more)
osgGamingTest/: CMakeLists.txt
trunk/: BUILD.BAT  BUILD_DEBUG.BAT  CLEAN.BAT  CMakeLists.txt  OnePercent.sln  RUN.BAT  RUN.bat  RUN_DEBUG.BAT  TODO.txt  class diagram.vsd
(+715 files in other folders)
